--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,17 +7,27 @@ environment:
   sdk: ">=2.18.0 <3.0.0"
 
 dependencies:
+  auto_route: 6.0.3
   bloc: 8.1.1
+  equatable: 2.0.5
   flutter:
     sdk: flutter
   flutter_bloc: 8.1.2
   flutter_localizations:
     sdk: flutter
+  freezed: 2.3.2
+  freezed_annotation: 2.2.0
+  get_it: 7.2.0
+  injectable: 2.1.1
   intl: 0.17.0
 
 dev_dependencies:
+  auto_route_generator: 6.0.1
+  build_runner: 2.3.3
+  flutter_gen_runner: 5.2.0
   flutter_test:
     sdk: flutter
+  injectable_generator: 2.1.5
   very_good_analysis: 3.1.0
 
 flutter:
