--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,17 +9,23 @@ environment:
 dependencies:
   auto_route: 6.0.3
   bloc: 8.1.1
+  collection: 1.17.0
   equatable: 2.0.5
   flutter:
     sdk: flutter
   flutter_bloc: 8.1.2
   flutter_localizations:
     sdk: flutter
+  flutter_screenutil: 5.7.0
+  flutter_svg: 2.0.4
   freezed: 2.3.2
   freezed_annotation: 2.2.0
   get_it: 7.2.0
   injectable: 2.1.1
   intl: 0.17.0
+  json_annotation: 4.8.0
+  json_serializable: 6.6.1
+  provider: 6.0.5
 
 dev_dependencies:
   auto_route_generator: 6.0.1
@@ -33,3 +39,11 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   generate: true
+  assets:
+    - assets/images/
+    - assets/icons/
+
+flutter_gen:
+  output: lib/generated/assets
+  integrations:
+    flutter_svg: true
