--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,13 +10,16 @@ dependencies:
   auto_route: 6.0.3
   bloc: 8.1.1
   collection: 1.17.0
+  dio: 5.1.1
   equatable: 2.0.5
+  fimber_io: ^0.6.6
   flutter:
     sdk: flutter
   flutter_bloc: 8.1.2
   flutter_localizations:
     sdk: flutter
   flutter_screenutil: 5.7.0
+  flutter_secure_storage: ^8.0.0
   flutter_svg: 2.0.2
   freezed: 2.3.2
   freezed_annotation: 2.2.0
@@ -25,7 +28,10 @@ dependencies:
   intl: 0.17.0
   json_annotation: 4.8.0
   json_serializable: 6.6.1
+  mobile_scanner: 3.2.0
   provider: 6.0.5
+  retrofit: 4.0.1
+  shared_preferences: ^2.1.0
 
 dev_dependencies:
   auto_route_generator: 6.0.1
@@ -34,6 +40,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   injectable_generator: 2.1.5
+  retrofit_generator: 6.0.0+1
   very_good_analysis: 3.1.0
 
 flutter:
