--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   json_annotation: 4.8.0
   json_serializable: 6.6.1
   mobile_scanner: 3.2.0
+  # scan: ^1.6.0
   provider: 6.0.5
   retrofit: 4.0.1
   shared_preferences: ^2.1.0
